--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
             <artifactId>fastexcel</artifactId>
             <version>0.18.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
